--- a/www/index.html
+++ b/www/index.html
@@ -25,17 +25,27 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Hello World</title>
-    </head>
-    <body>
-        <div class="app">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
-        </div>
+        <link rel="stylesheet" type="text/css" href="jquery.mobile-1.4.5.min.css" />
+
+	<title>Hello World</title>
+
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-    </body>
+	<script type="text/javascript" src="js/dbhelp.js"></script>
+        <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>	
+	<script type="text/javascript" src="js/jquery.mobile-1.4.5.min.js"></script>
+    </head>
+    <body onload="dbConnect();">
+        <div class="app">
+		<div data-role="page">
+        		<div data-role="header" data-position="fixed" data-theme="b">
+				<h1>My Friends</h1>
+			</div>
+			<div data-role="content">
+				<ul id="MyFriendsList" data-role="listview">
+				</ul>
+			</div>
+		</div>
+	</div>
+   </body>
 </html>
