--- a/www/index.html
+++ b/www/index.html
@@ -1,22 +1,4 @@
 <!DOCTYPE html>
-<!--
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
 <html>
     <head>
         <meta charset="utf-8" />
@@ -25,9 +7,9 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <link rel="stylesheet" type="text/css" href="jquery.mobile-1.4.5.min.css" />
+        <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.5.min.css" />
 
-	<title>Hello World</title>
+	<title>Super Counter</title>
 
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
@@ -35,17 +17,39 @@
         <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>	
 	<script type="text/javascript" src="js/jquery.mobile-1.4.5.min.js"></script>
     </head>
-    <body onload="dbConnect();">
-        <div class="app">
-		<div data-role="page">
-        		<div data-role="header" data-position="fixed" data-theme="b">
-				<h1>My Friends</h1>
+    <body onload="dbConnect();getCounters();">
+	<div data-role="page" id="index">
+       		<header data-role="header">
+			<h1>Super Counter</h1>
+			<div>
+			<input type="button" value="Add Counter" onclick="addCounter('hi')" data-theme="c"/>
+			<a href="#about" data-role="button" data-theme="c">About</a>
 			</div>
-			<div data-role="content">
-				<ul id="MyFriendsList" data-role="listview">
+		</header>
+		<div data-role="content">
+			<ul id="counterList" data-role="listview">
+			</ul>
+		</div>
+		<footer data-role="footer" data-theme="c">
+			<h3>FergDEV</h3>
+		</footer>
+	</div>
+	<div data-role="page" id="about" data-add-back-btn="true">
+		<header data-role="header">
+			<h1>About</h1>
+		</header>
+		<div data-role="content">
+			<p>Made by fergdev</p>
+			<p>Don't Judge me bro</p>
+		</div>
+		<footer data-role="footer" class="ui-body-b">
+			<div data-role="navbar">
+				<ul>
+					<li><a href="#index" data-direction="reverse">App Homescreen!</a></li>
+					<li><a href="http://fergdev.com">My Site</a></li>
 				</ul>
 			</div>
-		</div>
+		</footer>
 	</div>
    </body>
 </html>
