--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -8,7 +8,9 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.5.min.css" />
-        <link rel="stylesheet" type="text/css" href="css/mycss.css" />
+        <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
+	<link rel="stylesheet" type="text/css" href="css/mycss.css" />
+ 
 
 
 	<title>Super Counter</title>
@@ -21,15 +23,15 @@
     </head>
     <body onload="dbConnect();getCounters();">
 	<div data-role="page" id="index">
-       		<header data-role="header">
-			<h1>Super Counter</h1>
-			<div>
-			<input type="button" value="Add Counter" onclick="addCounter()" data-theme="c"/>
-			<input type="text" name="name" id="counter-name" value="name"/>
-			<a href="#about" data-role="button" data-theme="c">About</a>
-			</div>
+       		<header class="header-div">
+			<h1 class="main-heading">Smple Count</h1>
 		</header>
-		<div data-role="content">
+		<div class="content-div">
+			<div>
+				<i class="fa fa-3x fa-plus a-btn" onclick="addCounter()"></i>
+				<input type="text" class="a-tb" name="name" id="counter-name" value="Counter Name" style="color:#888;" onfocus="inputFocus(this)" onblur="inputBlur(this)"/>
+			</div>
+	
 			<ul id="counterList" data-role="listview">
 			</ul>
 		</div>
