--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -8,7 +8,8 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.5.min.css" />
-        <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
+	<link rel="stylesheet" type="text/css" href="jquery-ui/jquery-ui.min.css">	
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/mycss.css" />
 
 	<title>Simple Count</title>
@@ -16,9 +17,9 @@
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
 	<script type="text/javascript" src="js/dbhelp.js"></script>
-	<script type="text/javascript" src="js/swipe.js"></script>
 	<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>	
 	<script type="text/javascript" src="js/jquery.mobile-1.4.5.min.js"></script>
+	<script type="text/javascript" src="jquery-ui/jquery-ui.min.js"></script>
     </head>
     <body onload="dbConnect();getCounters();">
 	<div data-role="page" id="index">
