Got lists laying out the way I want

--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -34,7 +34,7 @@
 			</div>
 		</div>
 		<div class="counterListDiv">
-			<ul id="counterList" data-role="listview">
+			<ul id="counterList" >
 			</ul>
 		</div>
 	</div>
