--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -6,50 +6,98 @@
         <meta name="msapplication-tap-highlight" content="no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <link rel="stylesheet" type="text/css" href="css/index.css" />
         <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.5.min.css" />
+	<link rel="stylesheet" type="text/css" href="jquery-ui/jquery-ui.min.css">	
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
+	<link rel="stylesheet" type="text/css" href="css/mycss.css" />
 
-	<title>Super Counter</title>
+	<title>Count</title>
 
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
+	<script type="text/javascript" src="cordova.js"></script>
 	<script type="text/javascript" src="js/dbhelp.js"></script>
-        <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>	
+	<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>	
 	<script type="text/javascript" src="js/jquery.mobile-1.4.5.min.js"></script>
+	<script type="text/javascript" src="jquery-ui/jquery-ui.min.js"></script>
     </head>
-    <body onload="dbConnect();getCounters();">
-	<div data-role="page" id="index">
-       		<header data-role="header">
-			<h1>Super Counter</h1>
+    <body>
+	<div data-role="page" id="index-page">
+		<div id="index-header-div" class="my-header-div">
 			<div>
-			<input type="button" value="Add Counter" onclick="addCounter('hi')" data-theme="c"/>
-			<a href="#about" data-role="button" data-theme="c">About</a>
+				<h1 class="title-header">Count</h1>
 			</div>
-		</header>
-		<div data-role="content">
-			<ul id="counterList" data-role="listview">
-			</ul>
+			<div class="icon-div">
+				<i id='aboutButton' class="fa fa-2x fa-info a-btn"></i>
+				<i id='settingsButton'class="fa fa-2x fa-cog a-btn"></i>
+				<i id='addButton' class="fa fa-2x fa-plus a-btn"> </i>
+			</div>
 		</div>
-		<footer data-role="footer" data-theme="c">
-			<h3>FergDEV</h3>
-		</footer>
+		<div id="counterList" >
+		</div>
 	</div>
-	<div data-role="page" id="about" data-add-back-btn="true">
-		<header data-role="header">
-			<h1>About</h1>
-		</header>
-		<div data-role="content">
-			<p>Made by fergdev</p>
-			<p>Don't Judge me bro</p>
-		</div>
-		<footer data-role="footer" class="ui-body-b">
-			<div data-role="navbar">
-				<ul>
-					<li><a href="#index" data-direction="reverse">App Homescreen!</a></li>
-					<li><a href="http://fergdev.com">My Site</a></li>
-				</ul>
+
+	<div data-role="page" id="add-counter-page">
+       		<div id="add-counter-header-div" class="my-header-div">
+			<div>
+				<h1 class="title-header">Add</h1>
 			</div>
-		</footer>
+			<div class="icon-div">
+				<i class="fa fa-2x fa-check a-btn" onclick="addCounter();"></i>
+				<i class="fa fa-2x fa-close a-btn" onclick="$.mobile.changePage( '#index-page');"></i>
+	
+			</div>
+		</div>
+		<div id='addDiv'>
+			<div data-role="fieldcontain" class="add-counter-body">
+				<label for="counter-name">Counter Name</label>
+				<input type="text" class="a-tb" name="counter-name" id="counter-name" value="Counter Name" data-clear-btn="true"/>
+			</div>
+			<div data-role="fieldcontain" class="add-counter-body">
+				<label for="counter-value">Value</label>
+				<input type="number" setp="1" class="a-tb numbersOnly" name="counter-value" id="counter-value" value="0" data-clear-btn="true"/>
+			</div>
+	
+
+			<div data-role="fieldcontain" class="add-counter-body">
+				<label for="counter-increment">Increment</label>
+				<input type="text" class="a-tb numbersOnly" name="counter-increment" id="counter-increment" value="1" data-clear-btn="true"/>
+			</div>
+		</div>
+	</div>
+
+	<div data-role="page" id="settings-page">
+       		<div id="settings-header-div" class="my-header-div">
+			<div>
+				<h1 class="title-header">Settings</h1>
+			</div>
+			<div class="icon-div">
+				<i id='updateSettingsBtn' class="fa fa-2x fa-check a-btn"></i>
+			</div>
+		</div>
+		<div id='settingsDiv'>
+			<label><input id='vibrateCB' type="checkbox" name="vibrate-cb" >Vibrate</label>
+			<label><input id='soundCB' type="checkbox" name="sound-cb" >Sound</label>
+		</div>
+	</div>
+
+	<div data-role="page" id="about-page">
+       		<div id="about-header-div" class="my-header-div">
+			<div>
+				<h1 class="title-header">About</h1>
+			</div>
+			<div class="icon-div">
+				<i class="fa fa-2x fa-home a-btn" onclick="$.mobile.changePage( '#index-page');"></i>
+			</div>
+		</div>
+		
+		<div id='infoDiv'>
+			<h4>Instructions</h4>
+			<p>Swipe to delete counter.</p>
+
+			
+			<p>Made by fergdev.</p>
+			<p>This was made for fun, don't judge me bro.</p>
+			
+		</div>
 	</div>
    </body>
 </html>
